--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unraid",
+  "name": "@ridenui/unraid",
   "version": "0.0.3",
   "description": "A unraid nodejs API",
   "main": "dist/index.js",
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@release-it/conventional-changelog": "^3.3.0",
     "@types/ssh2": "^0.5.49",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -17,10 +18,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.5.0",
+    "release-it": "^14.11.8",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.2"
   },
   "dependencies": {
     "ssh2": "^1.5.0"
+  },
+  "scripts": {
+    "release": "release-it"
   }
 }
