--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "ssh2": "^1.5.0"
+    "ssh2": "^1.5.0",
+    "ts-mixer": "^6.0.0"
   }
 }
