feat(executors): add react native

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,5 @@
     "outDir": "dist",
     "declaration": true
   },
-  "exclude": ["node_modules", "examples"]
+  "exclude": ["node_modules", "examples", "dist"]
 }
