--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.5",
   "description": "A unraid nodejs API",
   "main": "dist/index.js",
+  "files": [
+    "dist/**"
+  ],
   "author": "Tom Sacher",
   "license": "MIT",
   "private": false,
@@ -24,8 +27,9 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "ts-mixer": "^6.0.0",
-    "ssh2": "^1.5.0"
+    "react-native-ssh-sftp": "^1.0.3",
+    "ssh2": "^1.5.0",
+    "ts-mixer": "^6.0.0"
   },
   "scripts": {
     "release": "release-it"
