--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "react-native-ssh-sftp": "^1.0.3",
     "ssh2": "^1.5.0",
     "ts-mixer": "^6.0.0"
+  },
+  "peerDependencies": {
+    "react-native-ssh-sftp": "^1.0.3"
   },
   "scripts": {
     "release": "release-it"
