fix(ci): do not required clean git working dir for release

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-ssh-sftp": "^1.0.3"
   },
   "scripts": {
-    "release": "release-it"
+    "release": "release-it --no-requireCleanWorkingDir"
   },
   "publishConfig": {
     "access": "public",
