fix(ci): do not required clean git working dir for release

--- a/.release-it.json
+++ b/.release-it.json
@@ -4,7 +4,8 @@
   },
   "git": {
     "commitMessage": "chore(release): v${version}",
-    "assets": ["dist.zip"]
+    "assets": ["dist.zip"],
+    "requireCleanWorkingDir": false
   },
   "plugins": {
     "@release-it/conventional-changelog": {
