--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "private": false,
   "access": "public",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.5",
     "@release-it/conventional-changelog": "^3.3.0",
+    "@types/jest": "^27.0.3",
     "@types/ssh2": "^0.5.49",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -21,8 +23,10 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^27.4.5",
     "prettier": "^2.5.0",
     "release-it": "^14.11.8",
+    "ts-jest": "^27.1.2",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.2"
   },
