--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "module": "commonjs",
     "target": "es5",
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "paths": {
+      "@system/*": ["./src/modules/system/extensions/*"]
+    }
   },
   "exclude": ["node_modules", "examples", "dist"]
 }
