--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.5.0",
     "release-it": "^14.11.8",
+    "ts-node": "^10.4.0",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.2"
   },
@@ -35,7 +36,8 @@
   },
   "scripts": {
     "release": "release-it",
-    "example:basic": "ts-node -r dotenv/config examples/basic.ts"
+    "example:basic": "ts-node -r dotenv/config examples/basic.ts",
+    "example:notifications": "ts-node -r dotenv/config examples/notification_test.ts"
   },
   "publishConfig": {
     "access": "public",
