feat(ssh2): add command queue to prevent overload of ssh channels

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "scripts": {
     "release": "release-it",
     "example:basic": "ts-node -r dotenv/config examples/basic.ts",
-    "example:notifications": "ts-node -r dotenv/config examples/notification_test.ts"
+    "example:notifications": "ts-node -r dotenv/config examples/notification_test.ts",
+    "example:userscripts": "ts-node -r dotenv/config examples/userscripts.ts"
   },
   "publishConfig": {
     "access": "public",
