--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,44 @@ on:
       - main
 
 jobs:
+  docs:
+    name: Publish docs
+    runs-on: ubuntu-20.04
+    if: "startsWith(github.event.head_commit.message, 'chore(release): ')"
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.HIGH5_BOT_TOKEN }}
+      - name: Configuring Git and NPM
+        run: |
+          git config --global user.name "high5-bot"
+          git config --global user.email "me+high5@dunklestoast.de"
+          npm config set //registry.npmjs.org/:_authToken ${{ secrets.HIGH5_NPM_TOKEN }}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          registry-url: 'https://registry.npmjs.org'
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Installing dependencies
+        run: yarn
+      - name: Build
+        run: yarn typedoc
+      - name: Publish generated content to GitHub Pages
+        uses: tsunematsu21/actions-publish-gh-pages@v1.0.2
+        with:
+          dir: docs
+          branch: gh-pages
+          token: ${{ secrets.HIGH5_BOT_TOKEN }}
   publishing:
     name: Building & Publish
     runs-on: ubuntu-20.04
