--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "release-it": "^14.11.8",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.11",
+    "typedoc-plugin-merge-modules": "^3.1.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
