--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prettier": "^2.5.0",
     "release-it": "^14.11.8",
     "ts-node": "^10.4.0",
-    "typedoc": "^0.22.10",
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-merge-modules": "^3.1.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
