fix(cpu): correct the count of cpu cores for the new unraid beta
This time for real

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "scripts": {
         "release": "release-it",
         "example:basic": "ts-node -r dotenv/config examples/basic.ts",
+        "example:cpu": "ts-node -r dotenv/config examples/cpu.ts",
         "example:notifications": "ts-node -r dotenv/config examples/notification_test.ts",
         "example:userscripts": "ts-node -r dotenv/config examples/userscripts.ts"
     },
